tests/snapshots/snapshot__type_errors@overriding_builtin.roto.snap
---
source: tests/snapshot.rs
expression: string
input_file: tests/scripts/type_errors/overriding_builtin.roto
---
Error: Type error: cycle detected!
   ╭─[ tests/scripts/type_errors/overriding_builtin.roto:1:1 ]
   │
 1 │ record u32 { b: u32 }
   │ ┬  
   │ ╰── type cycle detected
───╯
